calculadora.css
*{
    margin: 0;
    padding: 0;
}
.background{
    background-image: linear-gradient(45deg, black, blue);
    height: 100vh;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
}
.calculadora{
    position: absolute;
    background-color: black;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 15px;
    padding: 15px;
}
.botao{
    width: 50px;
    height: 50px;
    font-size: 25px;
    cursor: pointer;
    background-color: rgb(31,31,31);
    border: none;
    color: #fff;
    margin: 2px;
}
.botao:hover{
    background-color: rgb(87, 73, 73);
}
#resultado{
    width: 210px;
    height: 30px;
    margin: 5px;
    background-color: rgb(255, 255, 255);
    font-size: 25px;
    text-align: right;
    padding: 5px;
}

